--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,6 @@
+version 1.0.10
+- removed input validation to it's own library as it no longer made sense here (https://github.com/Ribeiro-Tiago/input-validator)
+
 version 1.0.9
 - optmized isFunction
 - optmized compatibility with nodejs
