--- a/changelog.txt
+++ b/changelog.txt
@@ -1,5 +1,10 @@
 version 1.1.1
 - improvements to isDOM
+- added isBoolean function
+- added better error messages for each function
+- fixed issues formatDate had
+- added param validation to formatDate
+- added more customizability to formatDate
 
 version 1.1.0
 - removed input validation to it's own library as it no longer made sense here (https://github.com/Ribeiro-Tiago/input-validator)
